Simplify Jenkinsfile for Windows compatibility